Changelog
=========
2016-04-27
* Release: 0.6.4
* got rid of all unicode warnings generated by sqlalchemy and start to use
  unicode for all strings

2016-04-19
* Release: 0.6.3
* extended functionality of `populate_obj` function of Base class
* minor bugfix for mysql
* BACKWARDS INCOMPATIBLE CHANGES
  * external_identities.local_user_name column is dropped and replaced with
    local_user_id


2015-11-13
* Release: 0.6.2
* replace cryptacular with passlib


2015-09-19
* Release: 0.6.1
* some fixes for ext.pyramid not-working completly with service related changes

2015-08-03
* Release: 0.6.0
* models are decoupled from services that interact with models
  (all model querying methods now live in services)
* BACKWARDS INCOMPATIBLE CHANGES
  * import related changes:
      * ziggurat_foundations.models doesn't import all the models anymore
        every model now lives in separate file
      * permission related functions now live in permissions module


2015-06-15
* Release: 0.5.6
* user model gains security date column
* minor bugfixes

2015-06-07
----------
* Release: 0.5.5
* added persist(), delete(), base_query() methods to Base model

2015-04-27
----------
* Release: 0.5.3
* resource.groups_for_perm() returns groups/permissions for single resource

2015-04-24
----------
* Release: 0.5.2
* resource.users_for_perm() now accepts `limit_group_permissions` param that
  that makes it return just group with perm name instead tuples including every
  user/perm pairs


2015-04-23
----------
* Release: 0.5.1
* Group.resources_with_possible_perms() added

2015-04-17
----------
* Release: 0.5
* Now uses detailed permissions
* BACKWARDS INCOMPATIBLE API CHANGES
    * ResourceMixin.users_for_perm() accepts additional parameters group_ids, and user_ids
      to limit the amount of results if needed
    * User.permissions, Resource.perms_for_user, Resource.direct_perms_for_user,
      Resource.group_perms_for_user, Resource.users_for_perm_detailed, Resource.users_for_perm