@@ -4,6 +4,7 @@ Changelog
 * Release: 0.6.4
 * got rid of all unicode warnings generated by sqlalchemy and start to use
   unicode for all strings
+* user.resources_with_possible_perms() passes resource_types properly
 
 2016-04-19
 * Release: 0.6.3
